added uvs and color undefined tests

--- a/solidparticles.html
+++ b/solidparticles.html
@@ -20,7 +20,7 @@
     </style>
     <script src="/BJS/Babylon.js/babylon.js"></script>
     <script src="/BJS/test/hand.js"></script>
-    <script src="solidparticles.js"></script>
+    <script src="solidparticles2.js"></script>
     <script src="solidparticlesystem.js"></script>
    </head>
    <body>
